// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductImage /> La imagen debe de aparecer al mandar como un product 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`<ProductImage /> La imagen deberia de aparecer en el componente 1`] = `
<img
  alt="Product image"
  className="productImg undefined"
  src="saludos.png"
/>
`;
